分离客户端和服务器

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,10 +1,9 @@
 CC 				    := gcc
-TARGET		  		?= bin/cqqserver
+TARGET		  		?= cqqclient
 
 INCDIRS 			:= 	src/lib/json_util \
 						src/lib/sqlite_util \
-						src/app/cqqserver/service/account \
-						src/app/cqqserver/main
+						src/main
 					
 VPATH           	:=$(INCDIRS)
 		   
@@ -15,7 +14,7 @@ COBJS				:= $(patsubst %, obj/%, $(CFILENDIR:.c=.o))
 OBJS				:= $(COBJS)
 
 $(TARGET) : $(OBJS)
-	$(CC) $(COBJS) -o $@ -lpthread -lsqlite3 -ljson
+	$(CC) $(COBJS) -o $@ -lpthread -ljson
 	
 $(OBJS) : obj/%.o : %.c
 	$(CC) -c $< -o $@
