分离单聊功能为好友功能，暂时提交，调试客户端

--- a/server/Makefile
+++ b/server/Makefile
@@ -4,7 +4,7 @@ TARGET		  		?= cqqserver
 INCDIRS 			:= 	src/lib/json_util \
 						src/lib/sqlite_util \
 						src/service/account \
-						src/service/single_chat \
+						src/service/friend \
 						src/main
 					
 VPATH           	:=$(INCDIRS)
